added windows, added telerik rad buttons

--- a/wpf app telerik/wpf app telerik.csproj
+++ b/wpf app telerik/wpf app telerik.csproj
@@ -75,6 +75,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Insctruction.xaml.cs">
+      <DependentUpon>Insctruction.xaml</DependentUpon>
+    </Compile>
+    <Page Include="Insctruction.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
